# TrangarBot

./: .gitignore  Cargo.toml  Dockerfile  commands.json  config.json.example  publish.sh
.github/workflows/: rust.yml
persist/: commands.json
src/: main.rs
src/actions/: autojoin.rs  check_alt4_blog.rs  check_factorio_friday_facts.rs  check_factorio_version.rs  commands.rs  mod.rs  multiplayer_info.rs  wolfram_alpha.rs
src/data/: channel.rs  mod.rs
