[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "trangarbot"
version = "0.1.0"

[dependencies]
lazy_static = "1.4"
parking_lot = "0.11"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
url = "2.1"

[dependencies.irc]
version = "0.15"
default-features = false
features = ["ctcp", "tls-rust"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.tokio]
version = "*"
features = ["rt-threaded", "tcp", "fs"]

[profile.release]
lto = true

